# DjangoRestDemo

./: .dockerignore  .gitignore  Dockerfile  Pipfile  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
DjangoRestDemo/: asgi.py  settings.py  urls.py  wsgi.py
app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app/migrations/: 0001_createsuperuser.py  0002_initial.py
